--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,9 +1,10 @@
 <div class="text-center mt-3 mb-3">
     <form>
-        <input 
-            class="rounded" 
-            type="search" 
-            placeholder="search..." 
+        <i aria-hidden="true" class="fa fa-search mr-1"></i>
+        <input
+            class="rounded"
+            type="search"
+            placeholder="search..."
             autofocus
             (keyup)="debounce.next($event.target.value)"
             >
@@ -12,7 +13,7 @@
 
 <ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
 
-<ap-load-button 
-    (click)="load()" 
+<ap-load-button
+    (click)="load()"
     [hasMore]="hasMore">
 </ap-load-button>
