--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -1,12 +1,12 @@
-<p class="text-center text-muted" *ngIf="!photos.length"> 
+<p class="text-center text-muted" *ngIf="!photos.length">
     Sorry, no photos
 </p>
 
 <ol class="list-unstyled">
-    <li *ngFor="let cols of rows" class="row">
+    <li *ngFor="let cols of rows" class="row no-gutters">
         <div *ngFor="let photo of cols" class="col-4">
-            <ap-photo 
-                [url]="photo.url" 
+            <ap-photo
+                [url]="photo.url"
                 [description]="photo.description">
             </ap-photo>
         </div>
